--- a/lab1/init.yml
+++ b/lab1/init.yml
@@ -34,4 +34,4 @@
   - name: add username and password to router
     ios_config:
       lines:
-        - username siduser114 privilege 15 secret password Fra2018!
+        - username siduser114 Fra2018!
