--- a/lab1/init.yml
+++ b/lab1/init.yml
@@ -34,4 +34,4 @@
   - name: add username and password to router
     ios_config:
       lines:
-        - username siduser114 
+        - username siduser114 privilage secret 15 password Fra2018!
